# 2022_2_MidnightSun

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  inproject.txt  project.txt  test
.github/workflows/: ci.yml  coverage.yml
project/: CMakeLIsts.txt  CMakeLists.txt  main.cpp
project/audio-player/include/: square.hpp
project/audio-player/src/: square.cpp
project/impl/: CurrentPlaylist.cpp  CurrentPlaylist.hpp  CurrentTrack.cpp  CurrentTrack.hpp  LeftWall.cpp  LeftWall.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  TitleBarButtons.cpp  TitleBarButtons.hpp  currentTrack.cpp  currentTrack.hpp  leftBoard.cpp  leftBoard.hpp  mainWindow.cpp  mainWindow.hpp  optionsWindow.cpp  optionsWindow.hpp
project/impl/QControllers/: QCurrentPlaylistController.cpp  QCurrentPlaylistController.hpp  QCurrentTrackController.cpp  QCurrentTrackController.hpp  QFileSystemController.cpp  QFileSystemController.hpp
project/impl/QModels/: QCurrentPlaylistUIModel.cpp  QCurrentPlaylistUIModel.hpp  QCurrentTrackUIModel.cpp  QCurrentTrackUIModel.hpp
project/impl/models/: MainWindow.cpp  MainWindow.hpp  MediaPlayer.hpp
project/impl/style/: style.css
project/impl/user interface/: user.hpp
project/impl/views/: CurrentPlaylistView.cpp  CurrentPlaylistView.hpp  CurrentTrackView.cpp  CurrentTrackView.hpp  FileSystemView.cpp  FileSystemView.hpp  LeftWallView.cpp  MainWindowView.cpp  MainWindowView.hpp  TitleBarButtonsView.cpp  TitleBarButtonsView.hpp
project/lib/: InterfaceButtons.cpp  InterfaceButtons.hpp  currentTrackController.hpp  currentTrackUIModel.hpp
project/lib/Components/: CurrentPlaylist.cpp  CurrentPlaylist.hpp  CurrentTrack.cpp  CurrentTrack.hpp
project/lib/Controllers/: CurrentPlaylistController.cpp  CurrentPlaylistController.hpp  CurrentTrackController.cpp  CurrentTrackController.hpp
project/lib/GlobalModels/: Mediator.hpp  TrackPlaylistModel.cpp  TrackPlaylistModel.hpp
project/lib/Mediator/: GlobalModel.cpp  GlobalModel.hpp  Mediator.hpp
project/lib/Models/: Models.cpp  Models.hpp  Playlist.cpp  Playlist.hpp  Track.cpp  Track.hpp
project/lib/SoundLib/: Parser.hpp  Playlist.cpp  Playlist.hpp  Track.cpp  Track.hpp
project/lib/SoundLibWithOuterDependncies/: ITrack.hpp  QTrack.cpp  QTrack.hpp
project/lib/UIModels/: CurrentPlaylistUIModel.cpp  CurrentPlaylistUIModel.hpp  CurrentTrackUIModel.cpp  CurrentTrackUIModel.hpp  TrackPlaylistModel.cpp  TrackPlaylistModel.hpp
project/lib/audio_mixer/: AudioMixer.cpp  AudioMixer.hpp
project/lib/models/: IMediaPlayer.hpp
project/lib/user interface/: userView.hpp
project/test/: abc.cpp  abc.hpp  main.cpp  mainwindow.ui
project/tests/: current_track.cpp  test.cpp
project/tests/MockClasses/: MockClasses.cpp  MockClasses.hpp  PlaylistUIModelTest.cpp  TrackPlaylistModel.cpp  TrackPlaylistModel.hpp
project/tests/ModelsTests/: PlaylistModelTest.cpp  TrackModelTest.cpp
project/tests/UIModelsTests/: CurrentTrackUIModelTest.cpp
project/unit_tests/: CMakeLists.txt  previous_track.cpp
trash/: CurrentTrackView.cpp  CurrentTrackView.hpp
