CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(mPlayer)

INCLUDE_DIRECTORIES(${PROJECT_SOURCES_DIR} project/impl/models)
INCLUDE_DIRECTORIES(${PROJECT_SOURCES_DIR} project/impl/user_interface)
INCLUDE_DIRECTORIES(${PROJECT_SOURCES_DIR} project/lib/audio_mixer)
INCLUDE_DIRECTORIES(${PROJECT_SOURCES_DIR} project/lib/models)

IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    ADD_SUBDIRECTORY(project)
ENDIF()

ENABLE_TESTING()
